styles/Home.module.css
.title {
  font-size: var(--font-size-xxlarge);
  padding: 1rem;
  font-family: 'font-monster-v2';
  text-transform: uppercase;
}
.subtitle {
  font-size: var(--font-size-medium);
  padding: 1rem;
  font-family: 'font-monster-v2';
  text-transform: uppercase;
}
.paragraph {
  font-size: var(--font-size-large);
  padding: 1rem;
}
.section {
  position: relative;
}

.white__background {
  background-color: var(--white-back);
}

.banner__container{
  position: relative;
  text-align: center;
}
.banner__container__img{
  width: 100%;
  height: auto;
  object-fit: cover;
  opacity: 60%;
}
.banner__container h2{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--white-back);
  font-family: 'font-monster-v2';
  text-transform: uppercase;
  font-size: 4rem;
  z-index: 1;
  padding: 0 1rem;
  text-shadow: 3px 3px 5px var(--dark-back);
  @media (width <=  768px) {
    font-size: 3rem;
  }
}

.history__container{
  padding: 2rem;
  display: flex;
  flex-direction: column;
}
.history__text__container {
  width: 70%;
  align-self: center;
  text-align: justify;
}
.history__fans__container {
  position: relative;
  display: flex;
  justify-content: space-between; 
  align-items: center;
  padding: 2rem;
  height: 400px;
}

.history__fans__container img {
  position: absolute;
}

.history__fans__container__left {
  width: 700px;
  transform: scaleX(-1);
  left: -30%; 
  @media (width <= 768px) {
    width: 500px;
  }
}

.history__fans__container__right {
  width: 500px;
  right: -30%; 
  transform: rotate(270deg);
  @media (width <= 768px) {
    width: 400px;
  }
}
.history__background__container {
  width: 100%;
  height: 100%;
  z-index: -1;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.history__background__container__img {
  width: 50%;
  height: 100%;
  object-fit: contain;
  z-index: -1;
}

.menu__container{
  padding: 2rem;
  display: flex;
  flex-direction: column;
}
.menu__container__contents{
 width: 70%;
 align-self: center;
}
.grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
}

.card {
  border: 1px solid #ccc;
  padding: 1rem;
  border-radius: 8px;
  text-align: center;
}

.card img {
  max-width: 100%;
  border-radius: 8px;
}

.list {
  list-style: none;
  padding: 0;
}

.listItem {
  font-size: 1.2rem;
  margin-bottom: 0.5rem;
}

.shops__container{
  padding: 2rem;
  text-align: center;
}
.footer__container{
  background-color: var(--monster-color);
  display: flex;
  justify-content: space-evenly;
  padding: 2rem;
}
.menu {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 1rem;
  min-width: fit-content;
}

@media (max-width: 768px) {
  .grid {
    grid-template-columns: 1fr;
  }

  .textOverlay {
    max-width: 90%;
  }
}

